--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,5 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
-    "openai-agent>=0.1.0",
-    "python-decouple>=3.8",
+    "openai-agents>=0.2.8",
 ]
